--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -620,7 +620,6 @@ footer {
 			#IE6 & {
 				height: 20px;
 			}
-			float: right;
 			width: 12em;
 			max-width: 100%;
 			margin-top: -5px;
@@ -639,11 +638,6 @@ footer {
 
 		#IE8 & {
 			filter: none;
-		}
-
-		input {
-			margin-left: 10px;
-			float: right;
 		}
 	}
 	.message {
